--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -15,7 +15,7 @@
     <td><%= author.name %></td>
     <td><%= link_to 'Show', author %></td>
     <td><%= link_to 'Edit', edit_author_path(author) %></td>
-    <td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', author, method: :delete, data: { confirm:' Are you sure? This will also delete all books records for \'' +author.name+'\''} %></td>
   </tr>
 <% end %>
 </table>
