--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,7 +15,7 @@
     <td><%= category.name %></td>
     <td><%= link_to 'Show', category %></td>
     <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure? This will also delete all book records in this category.' } %></td>
   </tr>
 <% end %>
 </table>
